// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event schema (0) match fails for invalid config -> empty: empty 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (1) match fails for invalid config -> Status event with unsupported property: Status event with unsupported property 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must NOT have additional properties, but found 'category'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must NOT have additional properties, but found 'category'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":\\"Good\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must NOT have additional properties, but found 'category'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":\\"Good\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must NOT have additional properties, but found 'category'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (2) match fails for invalid config -> Status event with missing number: Status event with missing number 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must NOT have additional properties, but found 'category'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must NOT have additional properties, but found 'category'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":\\"Good\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must NOT have additional properties, but found 'category'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":\\"Good\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Category'
    Path:     Event.schema.json#/required
  must NOT have additional properties, but found 'category'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (3) match fails for invalid config -> Status event with wrong symbolicId: Status event with wrong symbolicId 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Details/SymbolicId must be string
    Received: <number> 11
    Path:     Event.schema.json#/properties/Details/properties/SymbolicId/type
  /Category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_STATUS_1
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":11}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_STATUS_1
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":11}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_STATUS_1
    Path:     Event.schema.json#/properties/Category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (4) match fails for invalid config -> Syslog event with unsupported property: Syslog event with unsupported property 1`] = `
"expect(received).toMatchSchema(schema)

received
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_SYSLOG_0
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_SYSLOG_0
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_SYSLOG_0
    Path:     Event.schema.json#/properties/Category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (5) match fails for invalid config -> Syslog event with missing number: Syslog event with missing number 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Number'
    Path:     Event.schema.json#/required
  /Category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_SYSLOG_0
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Number'
    Path:     Event.schema.json#/required
  /Category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_SYSLOG_0
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  /Category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_SYSLOG_0
    Path:     Event.schema.json#/properties/Category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (6) match fails for invalid config -> Syslog event with wrong details: Syslog event with wrong details 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_SYSLOG_0
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":\\"Good\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_SYSLOG_0
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":\\"Good\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_SYSLOG_0
    Path:     Event.schema.json#/properties/Category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (7) match fails for invalid config -> NE107 event with unsupported property: NE107 event with unsupported property 1`] = `
"expect(received).toMatchSchema(schema)

received
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_NE107_2
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'DiagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"DiagnosticCode\\":\\"F-238\\",\\"Location\\":\\"Floor 1\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Location'
    Expected: <boolean> false
    Received: <object> {\\"DiagnosticCode\\":\\"F-238\\",\\"Location\\":\\"Floor 1\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_NE107_2
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'DiagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"DiagnosticCode\\":\\"F-238\\",\\"Location\\":\\"Floor 1\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Location'
    Expected: <boolean> false
    Received: <object> {\\"DiagnosticCode\\":\\"F-238\\",\\"Location\\":\\"Floor 1\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_NE107_2
    Path:     Event.schema.json#/properties/Category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (8) match fails for invalid config -> NE107 event with missing number: NE107 event with missing number 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Number'
    Path:     Event.schema.json#/required
  /Category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_NE107_2
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'DiagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"DiagnosticCode\\":\\"F-238\\",\\"Location\\":\\"Floor 1\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Location'
    Expected: <boolean> false
    Received: <object> {\\"DiagnosticCode\\":\\"F-238\\",\\"Location\\":\\"Floor 1\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  /Category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_NE107_2
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'DiagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"DiagnosticCode\\":\\"F-238\\",\\"Location\\":\\"Floor 1\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Location'
    Expected: <boolean> false
    Received: <object> {\\"DiagnosticCode\\":\\"F-238\\",\\"Location\\":\\"Floor 1\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must have required property 'Number'
    Path:     Event.schema.json#/required
  /Category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_NE107_2
    Path:     Event.schema.json#/properties/Category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (9) match fails for invalid config -> NE107 event with wrong details: NE107 event with wrong details 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_NE107_2
    Path:     Event.schema.json#/properties/Category/const
  /Category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_NE107_2
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":\\"Good\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'SymbolicId'
    Expected: <boolean> false
    Received: <object> {\\"SymbolicId\\":\\"Good\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_NE107_2
    Path:     Event.schema.json#/properties/Category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (10) match fails for invalid config -> Generic event with unsupported property: Generic event with unsupported property 1`] = `
"expect(received).toMatchSchema(schema)

received
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_GENERIC_99
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'Foo'
    Expected: <boolean> false
    Received: <object> {\\"Foo\\":\\"bar\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_GENERIC_99
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'Foo'
    Expected: <boolean> false
    Received: <object> {\\"Foo\\":\\"bar\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_GENERIC_99
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'Foo'
    Expected: <boolean> false
    Received: <object> {\\"Foo\\":\\"bar\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must NOT have additional properties, but found 'Unsupported'
    Expected: <boolean> false
    Path:     Event.schema.json#/additionalProperties
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (11) match fails for invalid config -> Generic event with missing number: Generic event with missing number 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Number'
    Path:     Event.schema.json#/required
  /Category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_GENERIC_99
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'Foo'
    Expected: <boolean> false
    Received: <object> {\\"Foo\\":\\"bar\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  /Category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_GENERIC_99
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'Foo'
    Expected: <boolean> false
    Received: <object> {\\"Foo\\":\\"bar\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  /Category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_GENERIC_99
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'Foo'
    Expected: <boolean> false
    Received: <object> {\\"Foo\\":\\"bar\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  must have required property 'Number'
    Path:     Event.schema.json#/required
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;

exports[`event schema (12) match fails for invalid config -> Event with unknown category: Event with unknown category 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_GENERIC_0
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'Foo'
    Expected: <boolean> false
    Received: <object> {\\"Foo\\":\\"bar\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_GENERIC_0
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'Foo'
    Expected: <boolean> false
    Received: <object> {\\"Foo\\":\\"bar\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_GENERIC_0
    Path:     Event.schema.json#/properties/Category/const
  must NOT have additional properties, but found 'Foo'
    Expected: <boolean> false
    Received: <object> {\\"Foo\\":\\"bar\\"}
    Path:     Event.schema.json#/properties/Details/additionalProperties
  /Category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_GENERIC_0
    Path:     Event.schema.json#/properties/Category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     Event.schema.json#/oneOf
"
`;
